designed the banner

--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
                 <li class="nav-item"><a href="" class="nav-link almost-black">Cart</a></li>
             </ul>
          </nav>
+         <div class="banner flex">
+            <div class="banner-box">
+                <p class="banner-texts orange-main"><span class="almost-black">ALWAYS</span> FRESH <br>FLOWERS</p>
+                <p class="bannersub light-gray">Indulge your senses with the beauty and fragrance of <br>our fresh flower shop. From classic roses to exotic <br> blooms, we offer a wide variety of fresh flowers that <br> are perfect for any occasion.</p>
+            </div>
+            <img src="assets/hero-flower.png" alt="banner-image" class="banner-image">
+         </div>
     </header>
+    <main>
+        <!-- plants section -->
+         <section class="our-plants"></section>
+    </main>
 </body>
 </html>
