designed plants section

--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Faugei - Flower Shop</title>
     <link rel="stylesheet" href="styles/main.css">
 </head>
+
 <body class="font-primary">
     <header>
         <!-- navigation bar -->
-         <nav class="navbar flex">
+        <nav class="navbar flex">
             <img src="assets/logo.png" alt="Faugei - Flower Shop">
             <ul class="nav-links flex">
                 <li class="nav-item"><a href="" class="nav-link almost-black">Home</a></li>
@@ -17,18 +19,86 @@
                 <li class="nav-item"><a href="" class="nav-link light-gray">About us</a></li>
                 <li class="nav-item"><a href="" class="nav-link almost-black">Cart</a></li>
             </ul>
-         </nav>
-         <div class="banner flex">
+        </nav>
+        <div class="banner flex">
             <div class="banner-box">
                 <p class="banner-texts orange-main"><span class="almost-black">ALWAYS</span> FRESH <br>FLOWERS</p>
-                <p class="bannersub light-gray">Indulge your senses with the beauty and fragrance of <br>our fresh flower shop. From classic roses to exotic <br> blooms, we offer a wide variety of fresh flowers that <br> are perfect for any occasion.</p>
+                <p class="bannersub light-gray">Indulge your senses with the beauty and fragrance of <br>our fresh
+                    flower shop. From classic roses to exotic <br> blooms, we offer a wide variety of fresh flowers that
+                    <br> are perfect for any occasion.
+                </p>
             </div>
             <img src="assets/hero-flower.png" alt="banner-image" class="banner-image">
-         </div>
+        </div>
     </header>
     <main>
         <!-- plants section -->
-         <section class="our-plants"></section>
+        <section class="our-plants">
+            <h1 class="title-plants orange-main">Our <span class="almost-black">Plants</span></h1>
+            <p class="description-plants light-gray">Indulge your senses with the beauty and fragrance of our fresh
+                flower shop. From <br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+
+            <!-- plants cards section -->
+            <div class="card-container">
+                <div class="plant-cards">
+                    <img class="plants-card-image" src="assets/sample-flower-image.png" alt="plant image">
+
+                    <p class="plant-card-title">Lily Blossom</p>
+                    <p class="card-price-tag">20 USD</p>
+                    <button class="card-button">ADD TO CART</button>
+                </div>
+                <div class="plant-cards">
+                    <img class="plants-card-image" src="assets/sample-flower-image.png" alt="plant image">
+
+                    <p class="plant-card-title">Lily Blossom</p>
+                    <p class="card-price-tag">20 USD</p>
+                    <button class="card-button">ADD TO CART</button>
+                </div>
+                <div class="plant-cards">
+                    <img class="plants-card-image" src="assets/sample-flower-image.png" alt="plant image">
+
+                    <p class="plant-card-title">Lily Blossom</p>
+                    <p class="card-price-tag">20 USD</p>
+                    <button class="card-button">ADD TO CART</button>
+                </div>
+                <div class="plant-cards">
+                    <img class="plants-card-image" src="assets/sample-flower-image.png" alt="plant image">
+
+                    <p class="plant-card-title">Lily Blossom</p>
+                    <p class="card-price-tag">20 USD</p>
+                    <button class="card-button">ADD TO CART</button>
+                </div>
+                <div class="plant-cards">
+                    <img class="plants-card-image" src="assets/sample-flower-image.png" alt="plant image">
+
+                    <p class="plant-card-title">Lily Blossom</p>
+                    <p class="card-price-tag">20 USD</p>
+                    <button class="card-button">ADD TO CART</button>
+                </div>
+                <div class="plant-cards">
+                    <img class="plants-card-image" src="assets/sample-flower-image.png" alt="plant image">
+
+                    <p class="plant-card-title">Lily Blossom</p>
+                    <p class="card-price-tag">20 USD</p>
+                    <button class="card-button">ADD TO CART</button>
+                </div>
+                <div class="plant-cards">
+                    <img class="plants-card-image" src="assets/sample-flower-image.png" alt="plant image">
+
+                    <p class="plant-card-title">Lily Blossom</p>
+                    <p class="card-price-tag">20 USD</p>
+                    <button class="card-button">ADD TO CART</button>
+                </div>
+                <div class="plant-cards">
+                    <img class="plants-card-image" src="assets/sample-flower-image.png" alt="plant image">
+
+                    <p class="plant-card-title">Lily Blossom</p>
+                    <p class="card-price-tag">20 USD</p>
+                    <button class="card-button">ADD TO CART</button>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
+
 </html>
