designed plants lover section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li class="nav-item"><a href="" class="nav-link almost-black">Cart</a></li>
             </ul>
         </nav>
+        <!-- banner section -->
         <div class="banner flex">
             <div class="banner-box">
                 <p class="banner-texts orange-main"><span class="almost-black">ALWAYS</span> FRESH <br>FLOWERS</p>
@@ -98,6 +99,22 @@
                 </div>
             </div>
         </section>
+
+        <!-- plants lover section -->
+         <section class="plants-lover flex">
+            <div class="pl-images">
+                <img src="assets/flower-store.png" alt="flower-store-image">
+                <img src="assets/trusted-badge.png" alt="trusted-badge" class="trusted-badge">
+            </div>
+            <div class="pl-description">
+                <p class="pl-des-heading">Flower & Plants Lover</p>
+                <ul class="fnl-list">
+                    <li class="fnl-des light-gray">Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses to exotic blooms, we offer a wide variety <br> of fresh.</li>
+                    <li class="fnl-des light-gray">Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses to exotic blooms, we offer a wide variety <br> of fresh.</li>
+                    <li class="fnl-des light-gray">Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses to exotic blooms, we offer a wide variety <br> of fresh.</li>
+                </ul>
+            </div>
+         </section>
     </main>
 </body>
 
