designed the latest deals section

--- a/index.html
+++ b/index.html
@@ -115,6 +115,29 @@
                 </ul>
             </div>
          </section>
+         <!-- latest deals section -->
+          <section class="latest-deals">
+            <div class="ld-heading">
+                <p class="ld-title"><span class="orange-main">Latest</span> Deals</p>
+                <p class="ld-des light-gray">Indulge your senses with the beauty and fragrance of our fresh flower shop. From<br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+
+                <div class="latest-deals-grid">
+                    <div class="deals-cards">
+                        <div class="item bloom">
+                            <p class="bloom-title">60% Off | Bloom Plant</p>
+                            <a href="" class="bloom-link">Shop Now</a>
+                        </div>
+                        <div class="item zabo">
+                            <p class="bloom-title">25% Off | Zabo Plant</p>
+                            <a href="" class="bloom-link">Shop Now</a>
+                        </div>
+                        <div class="item ana">
+                            <p class="bloom-title">30% Off | Ana  Plant</p>
+                            <a href="" class="bloom-link">Shop Now</a>
+                        </div>
+                    </div>
+                </div>
+          </section>
     </main>
 </body>
 
