designed the join section

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li class="nav-item"><a href="" class="nav-link almost-black">Cart</a></li>
             </ul>
         </nav>
+
         <!-- banner section -->
         <div class="banner flex">
             <div class="banner-box">
@@ -101,7 +102,7 @@
         </section>
 
         <!-- plants lover section -->
-         <section class="plants-lover flex">
+        <section class="plants-lover flex">
             <div class="pl-images">
                 <img src="assets/flower-store.png" alt="flower-store-image">
                 <img src="assets/trusted-badge.png" alt="trusted-badge" class="trusted-badge">
@@ -109,17 +110,25 @@
             <div class="pl-description">
                 <p class="pl-des-heading">Flower & Plants Lover</p>
                 <ul class="fnl-list">
-                    <li class="fnl-des light-gray">Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses to exotic blooms, we offer a wide variety <br> of fresh.</li>
-                    <li class="fnl-des light-gray">Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses to exotic blooms, we offer a wide variety <br> of fresh.</li>
-                    <li class="fnl-des light-gray">Indulge your senses with the beauty and <br> fragrance of our fresh flower shop. From classic <br> roses to exotic blooms, we offer a wide variety <br> of fresh.</li>
+                    <li class="fnl-des light-gray">Indulge your senses with the beauty and <br> fragrance of our fresh
+                        flower shop. From classic <br> roses to exotic blooms, we offer a wide variety <br> of fresh.
+                    </li>
+                    <li class="fnl-des light-gray">Indulge your senses with the beauty and <br> fragrance of our fresh
+                        flower shop. From classic <br> roses to exotic blooms, we offer a wide variety <br> of fresh.
+                    </li>
+                    <li class="fnl-des light-gray">Indulge your senses with the beauty and <br> fragrance of our fresh
+                        flower shop. From classic <br> roses to exotic blooms, we offer a wide variety <br> of fresh.
+                    </li>
                 </ul>
             </div>
-         </section>
-         <!-- latest deals section -->
-          <section class="latest-deals">
+        </section>
+
+        <!-- latest deals section -->
+        <section class="latest-deals">
             <div class="ld-heading">
                 <p class="ld-title"><span class="orange-main">Latest</span> Deals</p>
-                <p class="ld-des light-gray">Indulge your senses with the beauty and fragrance of our fresh flower shop. From<br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+                <p class="ld-des light-gray">Indulge your senses with the beauty and fragrance of our fresh flower shop.
+                    From<br> classic roses to exotic blooms, we offer a wide variety of fresh.</p>
 
                 <div class="latest-deals-grid">
                     <div class="deals-cards">
@@ -132,12 +141,21 @@
                             <a href="" class="bloom-link">Shop Now</a>
                         </div>
                         <div class="item ana">
-                            <p class="bloom-title">30% Off | Ana  Plant</p>
+                            <p class="bloom-title">30% Off | Ana Plant</p>
                             <a href="" class="bloom-link">Shop Now</a>
                         </div>
                     </div>
                 </div>
-          </section>
+        </section>
+
+        <!-- join section -->
+        <section class="join-section flex">
+            <p class="join-title">Join the colorful Bunch</p>
+            <form action="">
+                <input type="email" class="join-email" name="" id="" placeholder="  Write your email">
+                <button class="join-btn">Subscribe</button>
+            </form>
+        </section>
     </main>
 </body>
 
