designed the footer section

--- a/index.html
+++ b/index.html
@@ -157,6 +157,38 @@
             </form>
         </section>
     </main>
+
+    <!-- footer section -->
+     <footer class="flex">
+        <div class="logo1">
+            <img src="assets/logo.png" alt="brand-logo">
+            <p class="footer-title light-gray">Indulge your senses with the <br>beauty and fragrance of our fresh <br>flower shop. </p>
+        </div>
+        <div class="list2">
+            <ul class="footer-list">
+                <li class="footer-lists">Home</li>
+                <li class="footer-lists">About Us</li>
+                <li class="footer-lists">Blog</li>
+                <li class="footer-lists">FAQ</li>
+                <li class="footer-lists">Contact Us</li>
+            </ul>
+        </div>
+        <div class="list3">
+            <ul class="footer-list">
+                <li class="footer-lists">Features</li>
+                <li class="footer-lists">Pricing</li>
+                <li class="footer-lists">Privacy Policy</li>
+                <li class="footer-lists">Terms of Service</li>
+                <li class="footer-lists">Help Center</li>
+            </ul>
+        </div>
+        <div class="social flex">
+            <a href=""><img class="social-icons" src="assets/icon-linkedin.png" alt="icon-linkedin"></a>
+            <a href=""><img class="social-icons" src="assets/icon-twitter.png" alt="icon-twitter"></a>
+            <a href=""><img class="social-icons" src="assets/icon-facebook.png" alt="icon-facebook.png"></a>
+            <a href=""><img class="social-icons" src="assets/icon-youtube.png" alt="icon-youtube"></a>
+        </div>
+     </footer>
 </body>
 
 </html>
