tried to make responsive

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <nav class="navbar flex">
             <img src="assets/logo.png" alt="Faugei - Flower Shop">
             <ul class="nav-links flex">
-                <li class="nav-item"><a href="" class="nav-link almost-black">Home</a></li>
-                <li class="nav-item"><a href="" class="nav-link light-gray">Shop</a></li>
-                <li class="nav-item"><a href="" class="nav-link light-gray">About us</a></li>
-                <li class="nav-item"><a href="" class="nav-link almost-black">Cart</a></li>
+                <li class="nav-item"><a href="" class="nav-link link1 almost-black">Home</a></li>
+                <li class="nav-item"><a href="" class="nav-link link2 light-gray">Shop</a></li>
+                <li class="nav-item"><a href="" class="nav-link link3 light-gray">About us</a></li>
+                <li class="nav-item"><a href="" class="nav-link almost-black">Cart($56)</a></li>
             </ul>
         </nav>
 
@@ -104,7 +104,7 @@
         <!-- plants lover section -->
         <section class="plants-lover flex">
             <div class="pl-images">
-                <img src="assets/flower-store.png" alt="flower-store-image">
+                <img class="flower-store-image" src="assets/flower-store.png" alt="flower-store-image">
                 <img src="assets/trusted-badge.png" alt="trusted-badge" class="trusted-badge">
             </div>
             <div class="pl-description">
